Added some sample data

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <title>Deflect</title>
 </head>
 <body>
-    <p>
-        HELLO WORLD!!!
-    </p>
+    <div class="projectDescription">
+        <a href="https://github.com/equalitie/swabber"><h2 class="title">Swabber</h2></a>
+        <p class="description">
+             Simple pubsub-based IP banning engine. Subscribes to a ban publisher, bans the IPs and then unbans them
+             after a while.
+        </p>
+    </div>
+    <div class="projectDescription">
+        <a href="https://github.com/equalitie/bundler"><h2 class="title">Bundler</h2></a>
+        <p class="description">
+            A utility for bundling resources in web pages into a single page by inlining them using the data URI scheme.
+
+            It is designed to be easy to use in all kinds of scenarios, ranging from ones where one simply wants to
+            produce a web page with certain resources bundled to scenarios where one would like to proxy resource
+            requests, include caching functionality, modify request headers, and more.
+        </p>
+    </div>
+    <div class="projectDescription">
+        <a href="https://github.com/equalitie/banjax"><h2 class="title">Banjax</h2></a>
+        <p class="description">
+            Apache Traffic Server Plugin performing various anti-DDoS measures
+        </p>
+    </div>
+    <div class="projectDescription">
+        <a href="https://github.com/equalitie/edgemanage"><h2 class="title">Edgemanage</h2></a>
+        <p class="description">
+            Edgemanage is a tool for managing the HTTP availability of a cluster of web servers via DNS. The machines
+            tested are expected to be at risk of large volumes of traffic, attack or other potential instability. If a
+            machine is found to be underperforming, it is replace by a more performant host to ensure maximum
+            availability.
+        </p>
+    </div>
 </body>
 </html>
