Improve layout separation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css' />
 </head>
 <body>
+    <div id="tasklist">
     <div class="projectDescription">
         <a href="https://github.com/equalitie/swabber"><h2 class="title">Swabber</h2></a>
         <p class="description">
@@ -37,6 +38,7 @@
             machine is found to be underperforming, it is replace by a more performant host to ensure maximum
             availability.
         </p>
+    </div>
     </div>
 </body>
 </html>
