--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css' />
 </head>
 <body>
+    <div id="aboutDeflect">
+        <img id="deflectLogo" src="deflectlogo.png" />
+        <p id="deflectDescription">
+            <a href="https://deflect.ca">Deflect</a> is distributed- denial-of-service mitigation infrastructure
+            operated and maintained by <a href="https://equalit.ie">eQualit.ie</a>.  It is a free and open source
+            project, consisting of many sub-projects, that defends human rights advocacy sites for free.
+        </p>
+    </div>
     <div id="tasklist">
     <div class="projectDescription">
         <a href="https://github.com/equalitie/swabber"><h2 class="title">Swabber</h2></a>
