Split masthead to two paragraphs

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <div id="aboutDeflect">
-        <p id="deflectDescription">
+        <p>
             <a href="https://deflect.ca">Deflect</a> is distributed- denial-of-service mitigation infrastructure
-            operated and maintained by <a href="https://equalit.ie">eQualit.ie</a>.  It is a free and open source
+            operated and maintained by <a href="https://equalit.ie">eQualit.ie</a>.
+        </p>
+        <p>It is a free and open source
             project, consisting of many sub-projects, that defends human rights advocacy sites for free.
         </p>
     </div>
