--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         </p>
     </div>
     <div class="projectDescription">
+        <a href="https://github.com/equalitie/bundler-proxy"><h2 class="title">Bundler-proxy</h2></a>
+        <p class="description">
+          A service for proxying requests via bundler, with support
+          for remapping based on host header and other features for
+          encapsulating and providing access to bundled content.
+        </p>
+    </div>
+    <div class="projectDescription">
         <a href="https://github.com/equalitie/banjax"><h2 class="title">Banjax</h2></a>
         <p class="description">
             Apache Traffic Server Plugin performing various anti-DDoS
