--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
           part of Banjax.
         </p>
     </div>
+    <div class="projectDescription">
+        <a href="https://github.com/equalitie/eqbackup"><h2 class="title">eqbackup</h2></a>
+        <p class="description">
+          Not strictly related to the Deflect system but part of the
+          broader infrastructure - a system for automating the
+          deployment of differential, encrypted, off-site backups.
+        </p>
+    </div>
     </div>
 </body>
 </html>
