adding heading section

--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css' />
 </head>
 <body>
-    <div id="aboutDeflect">
+    <div id="heading">
+        <img id="deflectLogo" src="deflect.png" />
+        <img id="equalitieLogo" src="eqlogo.png" />
+        <h2>About eQualit.ie</h2>
         <p>
-            <a href="https://deflect.ca">Deflect</a> is distributed- denial-of-service mitigation infrastructure
-            operated and maintained by <a href="https://equalit.ie">eQualit.ie</a>.
+           <a href="https://equalit.ie">eQualit.ie</a>
+           develops open and reusable systems with a focus on privacy, online security, and information
+           management. Our goal is to create accessible technology and improve the skill-set needed for defending human
+           rights and freedoms in the digital age.
         </p>
-        <p>It is a free and open source
-            project, consisting of many sub-projects, that defends human rights advocacy sites for free.
+        <h2>About Deflect</h2>
+        <p>
+            <a href="https://deflect.ca">Deflect</a>
+            is a distributed infrastructure built to mitigate DDoS attacks and keep your website accessible at all
+            times.
         </p>
     </div>
+    <div class="hr"></div>
     <div id="tasklist">
     <div class="projectDescription">
         <a href="https://github.com/equalitie/swabber"><h2 class="title">Swabber</h2></a>
