Add a header for the projects list

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <div class="hr"></div>
     <div id="tasklist">
+    <h2>Deflect Subprojects</h2>
     <div class="projectDescription">
         <a href="https://github.com/equalitie/swabber"><h2 class="title">Swabber</h2></a>
         <p class="description">
