Make the images links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="heading">
-        <img id="deflectLogo" src="deflect.png" />
-        <img id="equalitieLogo" src="eqlogo.png" />
+        <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.png" /></a>
+        <a href="https://equalit.ie"><img id="equalitieLogo" src="eqlogo.png" /></a>
         <h2>About eQualit.ie</h2>
         <p>
            <a href="https://equalit.ie">eQualit.ie</a>
