--- a/index.html
+++ b/index.html
@@ -2,26 +2,23 @@
 <html>
 <head>
     <title>Deflect</title>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="style.css" />
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css' />
 </head>
 <body>
-    <div id="heading">
-        <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.png" /></a>
-        <a href="https://equalit.ie"><img id="equalitieLogo" src="eqlogo.png" /></a>
-        <h2>About eQualit.ie</h2>
-        <p>
-           <a href="https://equalit.ie">eQualit.ie</a>
-           develops open and reusable systems with a focus on privacy, online security, and information
-           management. Our goal is to create accessible technology and improve the skill-set needed for defending human
-           rights and freedoms in the digital age.
-        </p>
-        <h2>About Deflect</h2>
-        <p>
-            <a href="https://deflect.ca">Deflect</a>
-            is a distributed infrastructure built to mitigate DDoS attacks and keep your website accessible at all
-            times.
-        </p>
+    <div id="heading" class="pure-g">
+        <div class="pure-u-2-3">
+            <h1>About Deflect</h1>
+            <p>
+                <a href="https://deflect.ca">Deflect</a>
+                is a distributed infrastructure built to mitigate DDoS attacks and keep your website accessible at all
+                times.
+            </p>
+        </div>
+        <div class="pure-u-1-3">
+            <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.png" /></a>
+        </div>
     </div>
     <div class="hr"></div>
     <div id="tasklist">
@@ -99,6 +96,21 @@
           deployment of differential, encrypted, off-site backups.
         </p>
     </div>
+    </div>
+    <div class="hr"></div>
+    <div id="heading" class="pure-g">
+        <div class="pure-u-2-3">
+            <h2>About eQualit.ie</h2>
+            <p>
+               <a href="https://equalit.ie">eQualit.ie</a>
+               develops open and reusable systems with a focus on privacy, online security, and information
+               management. Our goal is to create accessible technology and improve the skill-set needed for defending human
+               rights and freedoms in the digital age.
+            </p>
+        </div>
+        <div class="pure-u-1-3">
+            <a href="https://equalit.ie"><img id="equalitieLogo" src="eqlogo.png" /></a>
+        </div>
     </div>
 </body>
 </html>
