--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@
                     Banjax.</p>
             </div>
             <div class="project">
+              <h3><a href="https://github.com/equalitie/autodeflect">autodeflect</a>
+                <p>
+                  Autodeflect is a set
+                  of <a href="http://www.ansible.com/">Ansible</a>
+                  recipes designed for use in <th></th>e creation of
+                  independent standalone instances of Deflect. The
+                  recipes feature much of the configuration logic used
+                  in the production instances of the Deflect system
+                  and they can be used to greatly aid in the operation
+                  of a personal instance. While these recipes are
+                  still in their infancy, they will gradually allow
+                  for the complete automated configuration of a
+                  standalone Deflect instance.
+                </p>
+            </div>
+
+            <div class="project">
                 <h3><a href="https://github.com/equalitie/eqbackup">eqbackup</a></h3>
 
                 <p>Not strictly related to the Deflect system but part of the broader infrastructure - a system for
@@ -185,4 +202,3 @@
 </div>
 </body>
 </html>
-
