Fix missing h3 closing

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     Banjax.</p>
             </div>
             <div class="project">
-              <h3><a href="https://github.com/equalitie/autodeflect">autodeflect</a>
+              <h3><a href="https://github.com/equalitie/autodeflect">autodeflect</a></h3>
                 <p>
                   Autodeflect is a set
                   of <a href="http://www.ansible.com/">Ansible</a>
