--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <p>
                   Autodeflect is a set
                   of <a href="http://www.ansible.com/">Ansible</a>
-                  recipes designed for use in <th></th>e creation of
+                  recipes designed for use in the creation of
                   independent standalone instances of Deflect. The
                   recipes feature much of the configuration logic used
                   in the production instances of the Deflect system
