--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                             href="https://github.com/equalitie/banjax">Banjax</a>.</p>
             </div>
             <div class="project">
+                <h3><a href="https://github.com/equalitie/bothound">BotHound</a></h3>
+
+                <p>Automatic detection of DDoS attacks and classification of botnets.</p>
+            </div>
+            <div class="project">
                 <h3><a href="https://github.com/equalitie/bundler">Bundler</a></h3>
 
                 <p>A utility for bundling resources in web pages into a single page by inlining them using the data URI
