updated bothound desc

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="project">
                 <h3><a href="https://github.com/equalitie/bothound">BotHound</a></h3>
 
-                <p>Automatic detection of DDoS attacks and classification of botnets.</p>
+                <p>a system for collecting, storing, and calculating DDOS attack characteristics in order to build attack fingerprints and classify botnets.
             </div>
             <div class="project">
                 <h3><a href="https://github.com/equalitie/bundler">Bundler</a></h3>
