--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
 
         <div id="subprojects" class="col-sm-11">
             <div class="project">
+                <h3><a href="https://github.com/equalitie/deflect">Deflect</a></h3>
+                <p>Ansible playbooks to setup your own Deflect DDoS mitigation infrastructure, built on Debian 9 </p>
+            </div>
+            <div class="project">
+            <div class="project">
+                <h3><a href="https://github.com/equalitie/autodeflect">Auto Deflect</a></h3>
+                <p>Ansible playbooks to setup your own Deflect DDoS mitigation infrastructure, built on Debian 7 </p>
+            </div>
+            <div class="project">
                 <h3><a href="https://github.com/equalitie/swabber">Swabber</a></h3>
 
                 <p>Simple pubsub-based IP banning engine. Subscribes to a ban publisher, bans the IPs and then unbans
@@ -164,23 +173,6 @@
                     access. Runs on edges in tandem with Banjax and Swabber. Soon to be reimplemented as part of
                     Banjax.</p>
             </div>
-            <div class="project">
-              <h3><a href="https://github.com/equalitie/autodeflect">autodeflect</a></h3>
-                <p>
-                  Autodeflect is a set
-                  of <a href="http://www.ansible.com/">Ansible</a>
-                  recipes designed for use in the creation of
-                  independent standalone instances of Deflect. The
-                  recipes feature much of the configuration logic used
-                  in the production instances of the Deflect system
-                  and they can be used to greatly aid in the operation
-                  of a personal instance. While these recipes are
-                  still in their infancy, they will gradually allow
-                  for the complete automated configuration of a
-                  standalone Deflect instance.
-                </p>
-            </div>
-
             <div class="project">
                 <h3><a href="https://github.com/equalitie/eqbackup">eqbackup</a></h3>
 
