--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="project">
             <div class="project">
                 <h3><a href="https://github.com/equalitie/autodeflect">Auto Deflect</a></h3>
-                <p>Ansible playbooks to setup your own Deflect DDoS mitigation infrastructure (legacy) </p>
+                <p>Ansible playbooks for Deflect configuration management </p>
             </div>
             <div class="project">
                 <h3><a href="https://github.com/equalitie/swabber">Swabber</a></h3>
