--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
     <div id="footer" class="col-sm-10 col-sm-offset-1">
         <div class="col-xs-8 col-md-9">
             <h2>About eQualit.ie</h2>
-            <a href="https://equalit.ie">eQualit.ie</a> develops open and reusable systems with a focus on privacy,
+            <a href="https://equalit.ie">eQualitie</a> develops open and reusable systems with a focus on privacy,
             online security, and information management. Our goal is to create accessible technology and improve the
-            skill-set needed for defending human rights and freedoms in the digital age.
+            skill-set for defending human rights and freedoms in the digital age.
         </div>
         <div id="footer-logo" class="col-xs-2">
-            <a href="https://equalit.ie"><img id="equalitieLogo" src="eqlogo.png"/></a>
+            <a href="https://equalit.ie"><img id="equalitieLogo" src="eq-logo-site.jpg"/></a>
         </div>
         <div class="push"></div>
     </div>
