--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
             min-height: 30px;
             clear: both;
         }
-
+        
+        img#deflectinfo {
+            margin-top: 16px;
+            width: 262px;
+        }
+        
         img#equalitieLogo {
             margin-top: 26px;
             width: 162px;
@@ -95,15 +100,17 @@
             keep your website accessible at all times. Built on principles and FOSS. 
         </div>
         <div id="heading-logo" class="col-xs-2">
-            <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.png"/></a>
+            <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.ca.png"/></a>
         </div>
     </div>
 </div>
 <hr/>
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-        <h2>Deflect Subprojects</h2>
-
+        <h2>Deflect Components</h2>
+        <div class="project">
+            <img id="deflectinfo" src="Deflect_Infographic_v1.png"/>
+        </div>
         <div id="subprojects" class="col-sm-11">
             <div class="project">
                 <h3><a href="https://github.com/equalitie/deflect">Deflect</a></h3>
@@ -154,13 +161,13 @@
 <div class="row">
     <div id="footer" class="col-sm-10 col-sm-offset-1">
         <div class="col-xs-8 col-md-9">
-            <h2>About eQualit.ie</h2>
+            <h2>About eQualitie</h2>
             <a href="https://equalit.ie">eQualitie</a> develops open and reusable systems with a focus on privacy,
             online security, and information management. Our goal is to create accessible technology and improve the
             skill-set for defending human rights and freedoms in the digital age.
         </div>
         <div id="footer-logo" class="col-xs-2">
-            <a href="https://equalit.ie"><img id="equalitieLogo" src="eq-logo-site.jpg"/></a>
+            <a href="https://equalit.ie"><img id="equalitieLogo" src="eQualitie_Logo_RGB_small.png"/></a>
         </div>
         <div class="push"></div>
     </div>
