--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         div#heading-logo img#deflectLogo {
             margin-top: 32px;
             padding: 24px;
-            background-color: #E72D34;
             border-radius: 8px;
             width: 180px;
         }
@@ -66,11 +65,6 @@
             height: 30px;
             min-height: 30px;
             clear: both;
-        }
-        
-        img#deflectinfo {
-            margin-top: 16px;
-            width: 262px;
         }
         
         img#equalitieLogo {
@@ -108,9 +102,8 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
         <h2>Deflect Components</h2>
-        <div class="project">
-            <img id="deflectinfo" src="Deflect_Infographic_v1.png"/>
-        </div>
+        <center><img src="Deflect_Infographic_v1.png"/> </center>
+
         <div id="subprojects" class="col-sm-11">
             <div class="project">
                 <h3><a href="https://github.com/equalitie/deflect">Deflect</a></h3>
