--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
         <h2>Deflect Components</h2>
-        <center><img src="Deflect_Infographic_v1.png"/> </center>
+        <img src="Deflect_Infographic_v1.png" width="600" height="200" align="center">
 
         <div id="subprojects" class="col-sm-11">
             <div class="project">
