--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="heading-logo" class="col-xs-2">
             <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.ca.png"/></a>
         </div>
-        <img src="Deflect_Infographic_v1.png" width="600" height="200" align="center">
+        <img src="Deflect_Infographic_v1.png" width="600" height="250" align="middle">
     </div>
 </div>
 <hr/>
