--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         div#footer {
             margin-top: 10px;
+            margin-bottom: 30px;
         }
 
         div#footer > .push {
@@ -66,10 +67,20 @@
             min-height: 30px;
             clear: both;
         }
-        
-        img#equalitieLogo {
-            margin-top: 26px;
-            width: 162px;
+
+        #footer-logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #footer-logo a {
+            width: 100%;
+        }
+
+        .row.equal {
+            display: flex;
+            flex-wrap: wrap;
         }
 
         div#subprojects .project {
@@ -96,7 +107,7 @@
         <div id="heading-logo" class="col-xs-2">
             <a href="https://deflect.ca"><img id="deflectLogo" src="deflect.ca.png"/></a>
         </div>
-        <img src="Deflect_Infographic_v1.png" width="600" height="250" align="middle">
+        <!--img src="Deflect_Infographic_v1.png" width="600" height="250" align="middle"-->
     </div>
 </div>
 <hr/>
@@ -108,7 +119,6 @@
                 <h3><a href="https://github.com/equalitie/deflect">Deflect</a></h3>
                 <p>Ansible playbooks to setup your own Deflect DDoS mitigation infrastructure, built on Debian 9 </p>
             </div>
-            <div class="project">
             <div class="project">
                 <h3><a href="https://github.com/equalitie/autodeflect">Auto Deflect</a></h3>
                 <p>Ansible playbooks for Deflect configuration management </p>
@@ -152,16 +162,17 @@
 <hr/>
 <div class="row">
     <div id="footer" class="col-sm-10 col-sm-offset-1">
-        <div class="col-xs-8 col-md-9">
-            <h2>About eQualitie</h2>
-            <a href="https://equalit.ie">eQualitie</a> develops open and reusable systems with a focus on privacy,
-            online security, and information management. Our goal is to create accessible technology and improve the
-            skill-set for defending human rights and freedoms in the digital age.
+        <div class="row equal">
+            <div class="col-xs-8 col-md-9">
+                <h2>About eQualitie</h2>
+                <a href="https://equalit.ie">eQualitie</a> develops open and reusable systems with a focus on privacy,
+                online security, and information management. Our goal is to create accessible technology and improve the
+                skill-set for defending human rights and freedoms in the digital age.
+            </div>
+            <div id="footer-logo" class="col-xs-2">
+                <a href="https://equalit.ie"><img id="equalitieLogo" src="eQualitie_Logo_RGB_small.png"/></a>
+            </div>
         </div>
-        <div id="footer-logo" class="col-xs-2">
-            <a href="https://equalit.ie"><img id="equalitieLogo" src="eQualitie_Logo_RGB_small.png"/></a>
-        </div>
-        <div class="push"></div>
     </div>
 </div>
 </body>
