--- a/new-index.html
+++ b/new-index.html
@@ -13,22 +13,19 @@
     <div class="row">
         <div id="heading" class="col-sm-10 col-sm-offset-1">
             <div class="row equal">
-                <div class="col-xs-8 col-md-9">
+                <div class="col-xs-7 col-md-9">
                     <h2>About Deflect</h2>
                     <a href="http://deflect.ca">Deflect</a> is a distributed infrastructure built to mitigate DDoS attacks and keep your website accessible at all times. Its built on
-                    <a href="https://docs.deflect.ca/en/latest/principles.html">principles</a> and free software. Our tooling has serviced thousands of websites and millions of their readers, since 2011. Learn more on the <a href="https://docs.deflect.ca/en/latest/index.html">Documentation
-                            portal</a> or by looking up individiual Github repositories below.
+                    <a href="https://docs.deflect.ca/en/latest/principles.html">principles</a> and free software. Our tooling has serviced thousands of websites and millions of their readers, since 2011. Learn more on the <a href="https://docs.deflect.ca/en/latest/index.html">Documentation portal</a>                    or by looking up individiual Github repositories below.
                 </div>
-                <div id="heading-logo" class="col-xs-2 col-md-3
-                        flex-center">
+                <div id="heading-logo" class="col-xs-2 col-md-3 flex-center">
                     <a href="https://deflect.ca"><img id="deflectLogo" src="img/deflect.ca.png" /></a>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-10 col-md-12 col-sm-10 col-sm-offset-1
-                flex-center infographic">
+        <div class="col-xs-10 col-md-12 col-sm-10 col-sm-offset-1 flex-center infographic">
             <div id="infographic-div"></div>
         </div>
     </div>
@@ -36,7 +33,7 @@
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
             <h2>Deflect Components</h2>
-            <div id="subprojects" class="col-sm-11">
+            <div class="subprojects" class="col-sm-11">
                 <div class="project">
                     <h3><a href="https://github.com/equalitie/deflect">Deflect</a></h3>
                     <p>Ansible playbooks to setup your own Deflect DDoS mitigation infrastructure, built on Debian 9. Works in conjunction with <a href="https://github.com/equalitie/autodeflect">Auto
@@ -63,20 +60,14 @@
     </div>
     <hr/>
     <div class="row">
-        <div id="heading" class="col-sm-10 col-sm-offset-1">
-            <div class="row equal">
-                <div class="col-xs-8 col-md-9">
-                    <h2>About Deflect Labs</h2>
-                    <a href="https://docs.deflect.ca/en/latest/deflect_labs.html">Deflect
-                                    Labs</a> is an ongoing and multi-facteted initiative to identify and mitigate malicious network behaivour using artificial intelligence. In production on the Deflect network, the technology and lessons
-                    learned are forming the basis of a privacy preserving threat information clearinghouse in the near future.
-                </div>
-            </div>
+        <div class="col-sm-10 col-sm-offset-1">
+            <h2>About Deflect Labs</h2>
+            <a href="https://docs.deflect.ca/en/latest/deflect_labs.html">Deflect Labs</a> is an ongoing and multi-facteted initiative to identify and mitigate malicious network behaivour using artificial intelligence. In production on the Deflect network,
+            the technology and lessons learned are forming the basis of a privacy preserving threat information clearinghouse in the near future.
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-10 col-md-12 col-sm-10
-                        col-sm-offset-1 flex-center infographic-dl">
+        <div class="col-xs-10 col-md-12 col-sm-10 col-sm-offset-1 flex-center infographic-dl">
             <div id="infographic-dl-div"></div>
         </div>
     </div>
@@ -84,7 +75,7 @@
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
             <h2>Deflect Labs Components</h2>
-            <div id="subprojects" class="col-sm-11">
+            <div class="subprojects" class="col-sm-11">
                 <div class="project">
                     <h3><a href="https://github.com/equalitie/baskerville">Baskerville</a></h3>
                     <p>Baskerville is an application layer (7) DDoS mitigation tool, running an analytics engine that leverages machine Learning to distinguish between normal and abnormal web traffic behavior. </p>
@@ -102,8 +93,7 @@
     </div>
     <hr/>
     <div class="row">
-        <div id="footer" class="col-sm-10
-                                col-sm-offset-1">
+        <div id="footer" class="col-sm-10 col-sm-offset-1">
             <div class="row equal">
                 <div class="col-xs-8 col-md-9">
                     <h2>About eQualitie</h2>
