--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="row">
         <div id="heading" class="col-sm-10 col-sm-offset-1">
             <div class="row equal">
-                <div class="col-xs-7 col-md-9">
+                <div class="col-xs-10 col-md-12">
+                    <div id="heading-logo">
+                        <a href="https://deflect.ca"><img id="deflectLogo" src="img/deflect.ca.png" /></a>
+                    </div>
                     <h2>About Deflect</h2>
                     <a href="http://deflect.ca">Deflect</a> is a distributed infrastructure built to mitigate DDoS attacks and keep your website accessible at all times. Its built on
                     <a href="https://docs.deflect.ca/en/latest/principles.html">principles</a> and free software. Our tooling has serviced thousands of websites and millions of their readers, since 2011. Learn more on the <a href="https://docs.deflect.ca/en/latest/index.html">Documentation portal</a>                    or by looking up individiual Github repositories below.
-                </div>
-                <div id="heading-logo" class="col-xs-2 col-md-3 flex-center">
-                    <a href="https://deflect.ca"><img id="deflectLogo" src="img/deflect.ca.png" /></a>
                 </div>
             </div>
         </div>
