test and fix of typo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>Baskerville is an application layer (7) DDoS mitigation tool, running an analytics engine that leverages machine Learning to distinguish between normal and abnormal web traffic behavior. </p>
                 </div>
                 <div class="project">
-                    <h3><a href="hhttps://github.com/equalitie/deflect-analytics-ecosystem">DAE</a></h3>
+                    <h3><a href="https://github.com/equalitie/deflect-analytics-ecosystem">DAE</a></h3>
                     <p>Docker files to run all Baskerville components, including the analytics engine, Apache Kafka, distributed storage with a Spark cluster, Prometheus and Grafana.</p>
                 </div>
                 <div class="project">
