--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                     <p>Baskerville is an application layer (7) DDoS mitigation tool, running an analytics engine that leverages machine Learning to distinguish between normal and abnormal web traffic behavior. </p>
                 </div>
                 <div class="project">
+                    <h3><a href="https://github.com/equalitie/baskerville_dashboard">Baskerville Dashboard</a></h3>
+                    <p>The Baskerville dashboard allows Baskerville users to submit feedback on previously detected attacks, to help Baskerville learn whether its predictions are accurate or not. This feedback in turn allows the model to mature, and produce better predictions in the future.</p>
+                </div>
+                <div class="project">
                     <h3><a href="https://github.com/equalitie/deflect-analytics-ecosystem">DAE</a></h3>
                     <p>Docker files to run all Baskerville components, including the analytics engine, Apache Kafka, distributed storage with a Spark cluster, Prometheus and Grafana.</p>
                 </div>
